added 74HC595 support, updated examples

--- a/docs/74HC165.md
+++ b/docs/74HC165.md
@@ -2,6 +2,8 @@
 
 [RoxXxtar.com/bmc](https://www.roxxxtar.com/bmc)
 
+[<< Repositor](../README.md)
+
 # Rox74HC165
 
 This is a simple library to read one or more daisy-chained 74HC165 multiplexers, it's intended for use with Teensy boards.
@@ -11,5 +13,3 @@ See the examples for code information.
 **NOTE:** wire pin 10 of the last 74HC165 to ground.
 
 ![74HC165 wiring instructions](../images/74hc165-wiring.jpg)
-
-For a library to read the 74HC4067/74HC4051 see [https://github.com/neroroxxx/Rox74HC40XX](https://github.com/neroroxxx/Rox74HC40XX)
