--- a/docs/74HC4967.md
+++ b/docs/74HC4967.md
@@ -2,6 +2,8 @@
 
 [RoxXxtar.com/bmc](https://www.roxxxtar.com/bmc)
 
+[<< Repositor](../README.md)
+
 # Rox74HC4067 / Rox74HC4051
 
 This is a simple library to read one or more daisy-chained 74HC4067/74HC4051 multiplexers,
