--- a/docs/74HC4967.md
+++ b/docs/74HC4967.md
@@ -2,7 +2,7 @@
 
 [RoxXxtar.com/bmc](https://www.roxxxtar.com/bmc)
 
-[<< Repositor](../README.md)
+[<< Repository](../README.md)
 
 # Rox74HC4067 / Rox74HC4051
 
