Added support for 74HC595

--- a/docs/74HC595.md
+++ b/docs/74HC595.md
@@ -10,4 +10,6 @@ This is a simple library to control one or more daisy-chained 74HC595 multiplexe
 
 See the examples for code information.
 
+**NOTE:** wire pin 11 of 74HC595 to VCC.
+
 ![74HC165 wiring instructions](../images/74hc595-wiring.jpg)
