--- a/docs/74HC165.md
+++ b/docs/74HC165.md
@@ -8,8 +8,14 @@
 
 This is a simple library to read one or more daisy-chained 74HC165 multiplexers, it's intended for use with Teensy boards.
 
+Notes:
+- LOAD and CLK are connected to all the 74HC165's in the chain.
+- DATA pin of the first Mux in the chain foes to MCU.
+- CHAIN-IN connects to DATA pin of the next Mux.
+- 74HC165 must have a pullup resistor of pins 0 to 7
+
 See the examples for code information.
 
 **NOTE:** wire pin 10 of the last 74HC165 to ground.
 
-![74HC165 wiring instructions](../images/74hc165-wiring.jpg)
+![74HC165 wiring instructions](../images/74HC165.jpg)
