--- a/docs/74HC595.md
+++ b/docs/74HC595.md
@@ -12,4 +12,4 @@ See the examples for code information.
 
 **NOTE:** wire pin 11 of 74HC595 to VCC.
 
-![74HC165 wiring instructions](../images/74hc595-wiring.jpg)
+![74HC165 wiring instructions](../images/74HC595.jpg)
