--- a/docs/MCP23017.md
+++ b/docs/MCP23017.md
@@ -31,7 +31,8 @@ GPIO on MCP23017 goes like this:
 - GPB7 = pin 15
 
 ### Wiring
-![MCP23017 & MCP23018 wiring](../images/MCP2301X.jpg)
+![MCP23017 wiring](../images/MCP23017.jpg)
+![MCP23018 wiring](../images/MCP23018.jpg)
 
 ```c++
 #include <RoxMux.h>
