--- a/docs/74HC595.md
+++ b/docs/74HC595.md
@@ -9,7 +9,8 @@
 This is a simple library to control one or more daisy-chained 74HC595 multiplexers, it's intended for use with Teensy boards.
 
 Notes:
-- LOAD and CLK are connected to all the 74HC165's in the chain.
+- LATCH and CLK are connected to all the 74HC165's in the chain.
+- If using a PWM to control brightness you may share this pin across all 74HC595.
 - DATA pin of the first Mux in the chain foes to MCU.
 - CHAIN-OUT connects to DATA pin of the next Mux.
 - Pins 0 to 7 will need a resistor inline to limit current to each led.
