--- a/docs/74HC165.md
+++ b/docs/74HC165.md
@@ -6,7 +6,7 @@
 
 # Rox74HC165
 
-This is a simple library to read one or more daisy-chained 74HC165 multiplexers, it's intended for use with Teensy boards.
+This is a simple library to read one or more daisy-chained 74HC165 multiplexers, it was designed for use with Teensy boards but any other arduino compatible boards should also work.
 
 Notes:
 - LOAD and CLK are connected to all the 74HC165's in the chain.
@@ -16,6 +16,6 @@ Notes:
 
 See the examples for code information.
 
-**NOTE:** wire pin 10 of the last 74HC165 to ground.
+**NOTE:** wire pin 10 of the last 74HC165 in a chain to ground (also if you're only using 1).
 
 ![74HC165 wiring instructions](../images/74HC165.jpg)
