--- a/docs/74HC595.md
+++ b/docs/74HC595.md
@@ -6,7 +6,7 @@
 
 # Rox74HC595
 
-This is a simple library to control one or more daisy-chained 74HC595 multiplexers, it's intended for use with Teensy boards.
+This is a simple library to control one or more daisy-chained 74HC595 multiplexers, it was designed for use with Teensy boards but any other arduino compatible boards should also work.
 
 Notes:
 - LATCH and CLK are connected to all the 74HC165's in the chain.
@@ -17,6 +17,6 @@ Notes:
 
 See the examples for code information.
 
-**NOTE:** wire pin 11 of 74HC595 to VCC.
+**NOTE:** wire pin 10 of 74HC595 to VCC.
 
 ![74HC165 wiring instructions](../images/74HC595.jpg)
