--- a/docs/74HC165.md
+++ b/docs/74HC165.md
@@ -19,3 +19,10 @@ See the examples for code information.
 **NOTE:** wire pin 10 of the last 74HC165 in a chain to ground (also if you're only using 1).
 
 ![74HC165 wiring instructions](../images/74HC165.jpg)
+
+## Meet MUXIN-16
+MUXIN-16 is a dual 74HC165 board with 16 inputs! get yours at [https://www.roxxxtar.com/badassmidi-muxin-16](https://www.roxxxtar.com/badassmidi-muxin-16)
+
+Your purchase helps development of BMC and RoxMux.
+
+[![MUXIN-16](../images/muxin-16-dual-74hc165-shift-register-multiplexer.jpeg)](https://www.roxxxtar.com/badassmidi-muxin-16)
