--- a/docs/74HC4967.md
+++ b/docs/74HC4967.md
@@ -10,3 +10,10 @@ This is a simple library to read one or more daisy-chained 74HC4067/74HC4051 mul
 it's intended for use with Teensy boards.
 
 See the examples for code information.
+
+## Meet ANAMUX
+ANAMUX is a dual 74HC4067 board with 32 inputs! get yours at [https://www.roxxxtar.com/badassmidi-anamux](https://www.roxxxtar.com/badassmidi-anamux)
+
+Your purchase helps development of BMC and RoxMux.
+
+[![MUXIN-16](../images/anamux-dual-74hc4067-analog-multiplexer.jpg)](https://www.roxxxtar.com/badassmidi-anamux)
